README terminado e imagenes

--- a/Pregunta3.ipynb
+++ b/Pregunta3.ipynb
@@ -2,26 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "149.48404853760005\n",
-      "-0.44459779523839593\n",
-      "149.54281\n",
-      "0.058761462399957054\n"
+      "E[X]E[Y]:  149.48404853760005\n",
+      "La correlación E[XY] entre X y Y es:  149.54281\n",
+      "La covarianza entre X y Y es:  0.058761462399957054\n",
+      "El coeficiente de Pearson es aproximadamente igual a:  0.002952985697771599\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import scipy.stats\n",
-    "import scipy.optimize\n",
     "\n",
     "datos = pd.read_csv(\"xy.csv\")\n",
     "xProb = [n for n in datos.sum(axis=1, numeric_only=True)]\n",
@@ -31,24 +28,28 @@
     "\n",
     "expectedX = 0\n",
     "expectedY = 0\n",
+    "xVals = []\n",
+    "yVals = []\n",
     "for i in range (0,len(xProb)):\n",
     "    expectedX += xDom[i]*xProb[i]\n",
     "\n",
     "for i in range (0, len(yProb)):\n",
     "    expectedY += yDom[i]*yProb[i]\n",
     "\n",
-    "print(expectedX*expectedY)\n",
+    "print(\"E[X]E[Y]: \", expectedX*expectedY)\n",
     "\n",
-    "xProbSeries = pd.Series(xProb)\n",
-    "yProbSeries = pd.Series(yProb)\n",
     "datos = pd.read_csv(\"xyp.csv\")\n",
     "XporYporP = datos.x * datos.y * datos.p\n",
     "Rxy = XporYporP.sum()\n",
     "\n",
-    "print(Rxy)\n",
+    "print(\"La correlación E[XY] entre X y Y es: \", Rxy)\n",
     "\n",
     "Cxy = Rxy - expectedX*expectedY\n",
-    "print(Cxy)"
+    "print(\"La covarianza entre X y Y es: \",Cxy)\n",
+    "\n",
+    "# En la pregunta 1 se obtuvo que sigma_x se aproxima a 3,3 y sigma_y a 6,03\n",
+    "pearson = Cxy/(3.3*6.03)\n",
+    "print(\"El coeficiente de Pearson es aproximadamente igual a: \", pearson)"
    ]
   }
  ],
