--- a/Pregunta1.ipynb
+++ b/Pregunta1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -39,22 +39,34 @@
     "import scipy.stats\n",
     "import scipy.optimize\n",
     "\n",
+    "# En datos se almacena un DataFrame con los contenidos de xy.csv y se colocan índices a las filas iguales a las x\n",
     "datos = pd.read_csv(\"xy.csv\", index_col=0)\n",
+    "\n",
+    "# La probabilidad marignal de un valor de X es dada por la suma de todas las probabilidades de Y cuando\n",
+    "# X tiene dicho valor y viceversa. Entonces, una columna con la suma de todas las columnas del DataFrame\n",
+    "# tiene la probabilidad marginal para X y una fila con la suma de todas las filas del DataFrame tiene la \n",
+    "# probabilidad marginal de Y. Estas se realizan con el método \"sum()\" de los objetos de clase DataFrame.\n",
+    "# Esta función retorna una serie de Pandas, por lo que se usa una lista de comprensión para \"convertirlo\"\n",
+    "# a lista (sin índices). La opción \"numeric_only\" sirve para que no se sumen strings en Python\n",
     "xProb = [n for n in datos.sum(axis=1, numeric_only=True)]\n",
     "yProb = [n for n in datos.sum(axis=0, numeric_only=True)]\n",
+    "\n",
+    "# xDom y yDom son los dominios (valores) de X y Y\n",
     "xDom = list(range(5, 16))\n",
     "yDom = list(range(5, 26))\n",
     "\n",
+    "# Funciones para realizar una gráfica con MatPlotLib. Se define un gráfico de barras para asemejar un histograma\n",
     "plt.bar(xDom, xProb, alpha=0.7)\n",
-    "plt.grid(axis=\"y\", alpha=0.75)\n",
+    "plt.grid(axis=\"y\", alpha=0.75) # Líneas horizontales para ver los valores del eje vertical\n",
     "plt.xlabel(\"Valor de X\")\n",
     "plt.ylabel(\"Frecuencia relativa de X\")\n",
     "plt.title(\"Distribución de X\")\n",
     "# plt.savefig(\"img/xInitPlot.png\")\n",
     "plt.show()\n",
     "\n",
+    "# Funciones para realizar una gráfica con MatPlotLib. Se define un gráfico de barras para asemejar un histograma\n",
     "plt.bar(yDom, yProb, alpha=0.7)\n",
-    "plt.grid(axis=\"y\", alpha=0.75)\n",
+    "plt.grid(axis=\"y\", alpha=0.75) # Líneas horizontales para ver los valores del eje vertical\n",
     "plt.xlabel(\"Valor de Y\")\n",
     "plt.ylabel(\"Frecuencia relativa de Y\")\n",
     "plt.title(\"Distribución de Y\")\n",
@@ -103,14 +115,24 @@
     }
    ],
    "source": [
+    "# Función que recibe una lista de valores que representa un dominio, el sigma y el mu de una distribución gaussiana\n",
+    "# Retorna una lista con el dominio original transformado a una distribución gaussiana. Utilizada para\n",
+    "# realizar el ajuste de la curva con curve_fit() de scipy.optimize\n",
     "def gaussian(domain, sigma, mu):\n",
     "    return (1/(np.sqrt(2*np.pi*sigma**2)))*np.exp( (-(domain-mu)**2)/(2*sigma**2) )\n",
     "\n",
+    "# El método curve_fit() recibe como primer argumento la función con la cual se ajustan los datos, los\n",
+    "# valores en el eje X y los valores del eje Y que representan la función a ser ajustada. Retorna una tupla,\n",
+    "# cuyo primer elemento es una lista con los parámetros de la función (en este caso sigma y mu) y de segundo\n",
+    "# parámetro la covarianza de los datos del eje X con los del eje Y\n",
     "paramsX, covX = scipy.optimize.curve_fit(gaussian, xDom, xProb)\n",
     "paramsY, covY = scipy.optimize.curve_fit(gaussian, yDom, yProb)\n",
     "\n",
+    "# xFit y yFit son el modelo teórico obtenido de la distribución gaussiana para X y Y\n",
     "xFit = gaussian(xDom, paramsX[0], paramsX[1])\n",
     "yFit = gaussian(yDom, paramsY[0], paramsY[1])\n",
+    "\n",
+    "# Se grafican las figuras con los datos originales y el modelo teórico hallado superpuestos\n",
     "\n",
     "plt.bar(xDom, xProb, alpha=0.75)\n",
     "plt.scatter(xDom, xFit)\n",
