--- a/Pregunta4.ipynb
+++ b/Pregunta4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,14 +47,19 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
     "\n",
+    "# La misma función para definir una distribución gaussiana utilizada en Pregunta3.ipynb\n",
     "def gaussian(domain, sigma, mu):\n",
     "    return (1/(np.sqrt(2*np.pi*sigma**2)))*np.exp( (-(domain-mu)**2)/(2*sigma**2) )\n",
     "\n",
+    "# Se definen \"preimágenes\" para los valores de X y Y con 1000 puntos, para que se asemejen a una PDF\n",
     "X = np.linspace(5, 15, 1000)\n",
     "Y = np.linspace(5, 25, 1000)\n",
-    "xModel = gaussian(X, 3.3, 9.905)\n",
+    "# Se obtienen las distribuciones normales asociadas a X y Y\n",
+    "xModel = gaussian(X, 3.3, 9.905) \n",
     "yModel = gaussian(Y, 6.06, 15.08)\n",
     "\n",
+    "# Se grafican los modelos teóricos continuos de las\n",
+    "# probabilidades marginales de X y Y. Se nota que sí producen distribuciones normales\n",
     "plt.plot(X, xModel, alpha=0.75)\n",
     "plt.grid(axis=\"y\", alpha=0.7)\n",
     "plt.xlabel(\"Valor de X\")\n",
@@ -71,8 +76,13 @@
     "# plt.savefig(\"img/yTheoCurve.png\")\n",
     "plt.show()\n",
     "\n",
+    "# Se utiliza el toolkit de graficación en 3D de matplotlib para graficar la probabilidad conjunta de X y Y.\n",
+    "# Se utiliza un wireframe, que necesita que X y Y formen un \"mesh grid, una malla\"\n",
     "X, Y = np.meshgrid(X,Y)\n",
+    "# El valor teórico de f_{X,Y}(x,y) definido en la asignación 2\n",
     "Z = (1/(2*np.pi*19.9))*np.e**( -(((X-9.905)**2)/21.78) - (((Y - 15.08)**2)/72.72) )\n",
+    "\n",
+    "# El resto es para crear la gráfica tridimensional. Definición de los ejes, sus etiquetas, etc.\n",
     "fig = plt.figure()\n",
     "ax = plt.axes(projection=\"3d\")\n",
     "ax.plot_wireframe(X, Y, Z, color=\"b\")\n",
@@ -81,7 +91,7 @@
     "ax.set_zlabel(\"Probabilidad conjunta de X y Y\")\n",
     "ax.set_title(\"Distribución conjunta de X y Y\")\n",
     "ax.view_init(30, 35)\n",
-    "plt.savefig(\"img/zTheoCurve.png\")\n",
+    "# plt.savefig(\"img/zTheoCurve.png\")\n",
     "plt.show()"
    ]
   }
